# ARC

./: CMakeLists.txt  README.md  arc_main.cpp  perfect_main.cpp  runtest.sh
.github/workflows/: workflow.yml
arc_tests/bd_tests/uniform_distribution/: cahce-100_data-10000000.ans
example/: CMakeLists.txt  main.cpp
include/: arc.h  arc_cache.h  detail.h  perfect_cache.h
perfect_bd_tests/poisson_distribution/: cache-10_data-10000000.ans
src/: arc_cache.cpp
unit_tests/arc/: CMakeLists.txt  arc_tests.cpp
unit_tests/arc/data/bd_tests/poisson_distribution/: cache-10_data-10000000.ans
unit_tests/perfect/: CMakeLists.txt  perfect_tests.cpp
unit_tests/perfect/data/bd_tests/uniform_distribution/: cahce-100_data-10000000.ans
unit_tests/test_utils/: CMakeLists.txt
unit_tests/test_utils/include/: test_utils.h
unit_tests/test_utils/src/: test_utils.cpp
utils/: CMakeLists.txt
utils/include/: log.h  process_utils.h
utils/src/: process_utils.cpp
